fixed issue with font on mobile devices using light mode

--- a/src/app/styles/countrypage.css
+++ b/src/app/styles/countrypage.css
@@ -1,5 +1,6 @@
 /* General Styles */
 #infoBody {
+  color: white;
   display: block;
   margin-left: 15px;
   font-size: 17.5px;
