--- a/src/app/styles/support.css
+++ b/src/app/styles/support.css
@@ -26,6 +26,7 @@
 
 #infoBodySS {
   display: block;
+  color: white;
   font-size: 17.5px;
   margin: 0;
   text-align: left;
